kubernetesProject/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-project-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: kubernetesproject.local
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: kubernetes-project-service
                port:
                  number: 80
